Restore disk actions

--- a/ui/sections/storage/inspectors/disk.reel/disk.html
+++ b/ui/sections/storage/inspectors/disk.reel/disk.html
@@ -231,7 +231,7 @@
                 "value": "Erase"
             },
             "bindings": {
-                "classList.has('hide')": {"<-": "!@owner.object.isAvailable"}
+                "classList.has('hide')": {"<-": "!!@owner.object._allocation"}
             }
         },
         "onlineButtonSubstitution":{
