Add localization in alert filter inspector

--- a/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
+++ b/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
@@ -68,7 +68,7 @@
             }
         },
         "info": {
-            "prototype": "montage/ui/text.reel",
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
                 "element": {"#": "info"},
                 "value": "Alerts will only send when all predicates are true."
