--- a/ui/sections/accounts/inspectors/user.reel/user.html
+++ b/ui/sections/accounts/inspectors/user.reel/user.html
@@ -83,7 +83,7 @@
                 "validationPath": "uid",
                 "validator": {"@": "uidValidator"},
                 "errorMessage": "User ID must be between 0 and 4294967295",
-                "helpMessage": "User ID must be between 0 and 4294967295"
+                "helpMessage": "User.uid"
             },
             "bindings": {
                 "value": {"<->": "+@owner.object.uid"}
