styles guest health

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -342,7 +342,7 @@
             },
             "bindings": {
                 "rows": {"<-": "@owner.guestInfoLoadAvg"},
-                "classList.has('is-hidden')": {"<-": "!@owner.guestInfoLoadAvg.length"} 
+                "classList.has('is-hidden')": {"<-": "!@owner.guestInfoLoadAvg.length"}
             }
         },
         "guestInfoInterfaces": {
@@ -367,7 +367,7 @@
             },
             "bindings": {
                 "rows": {"<-": "@owner.guestInfoInterfaces"},
-                "classList.has('is-hidden')": {"<-": "!@owner.guestInfoInterfaces.length"} 
+                "classList.has('is-hidden')": {"<-": "!@owner.guestInfoInterfaces.length"}
             }
         },
         "devices": {
@@ -484,8 +484,10 @@
             <div data-montage-id="cpu"></div>
             <div data-montage-id="memory"></div>
             <div data-montage-id="autostart"></div>
-            <div data-montage-id="guestHealthStatusLight" class="VirtualMachine-guestHealthStatus"></div>
-            <div data-montage-id="guestHealthStatusLabel"></div>
+            <div class="flex-row flex-align--center g-margin-bottom">
+                <div data-montage-id="guestHealthStatusLight" class="g-margin-right--half"></div>
+                <div data-montage-id="guestHealthStatusLabel"></div>
+            </div>
             <div data-montage-id="guestToolsSubstitution">
                 <div data-montage-id="guestToolsStatus" data-arg="unavailable"></div>
                 <div data-montage-id="guestTools" data-arg="available">
