Reflect privileged preset when creating a container. Ticket: #20669

--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -24,6 +24,7 @@
                 "_availablesDockers": {"<-": "@owner._hostDockers.map{{label: name, value: id}}"},
                 "object.interactive": {"<-": "@owner.currentTemplate.interactive"},
                 "object.autostart": {"<-": "@owner.currentTemplate.autostart"},
+                "object.privileged": {"<-": "@owner.currentTemplate.privileged"},
                 "object.expose_ports": {"<-": "!!@owner.currentTemplate.expose_ports"},
                 "object.names": {"<-": "@names.value.split(' ')"}
             }
