--- a/ui/sections/containers/controls/table-settings.reel/table-settings.html
+++ b/ui/sections/containers/controls/table-settings.reel/table-settings.html
@@ -8,6 +8,9 @@
         "owner": {
             "properties": {
                 "element": {"#": "owner"}
+            },
+            "bindings": {
+                "inspector.isSaveDisabled": {"<-": "@table.isAddingNewEntry"}
             }
         },
 
