--- a/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
+++ b/ui/sections/containers/inspectors/container-creator.reel/container-creator.html
@@ -173,6 +173,7 @@
                 "element": {"#": "settingsTable"}
             },
             "bindings": {
+                "inspector": {"<-": "@inspector"},
                 "values": {"<-": "@owner.currentTemplate.settings.map{{ variable: id, value: value, description: description, optional: optional }}"}
             }
         },
@@ -181,6 +182,9 @@
             "prototype": "ui/sections/containers/controls/table-environment.reel",
             "properties": {
                 "element": {"#": "environmentsTable"}
+            },
+            "bindings": {
+                "inspector": {"<-": "@inspector"}
             }
         },
 
@@ -190,6 +194,7 @@
                 "element": {"#": "portsTable"}
             },
             "bindings": {
+                "inspector": {"<-": "@inspector"},
                 "values": {"<-": "@owner.currentTemplate.ports.map{{ host_port: host_port, container_port: container_port, protocol: protocol }}"}
             }
         },
