--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine-readme.reel/virtual-machine-readme.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine-readme.reel/virtual-machine-readme.html
@@ -10,13 +10,13 @@
                 "element": {"#": "owner"}
             }
         },
-        "readmeTextArea": {
-            "prototype": "blue-shark/ui/text-area.reel",
+        "readmeHtml": {
+            "prototype": "blue-shark/ui/text.reel",
             "properties": {
-                "element": {"#": "readmeTextArea"}
+                "element": {"#": "readmeHtml"}
             },
             "bindings": {
-                "value": {"<->": "@owner.object.text"}
+                "value": {"<-": "@owner.parsedHtml"}
             }
         }
     }
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="VirtualMachineReadme">
-        <div data-montage-id="readmeTextArea" spellcheck="false"></div>
+        <div data-montage-id="readmeHtml"></div>
     </div>
 </body>
 </html>
