--- a/ui/controls/tree-view.reel/tree-view.html
+++ b/ui/controls/tree-view.reel/tree-view.html
@@ -45,7 +45,7 @@
             },
             "bindings": {
                 "value": {"<-": "!!@owner.controller.parent && @owner.controller.parent.name.length < 10 ? @owner.controller.parent.name : 'Back'"},
-                "disabled": {"<-": "!!!@owner.controller.parent"}
+                "disabled": {"<-": "!@owner.controller.parent"}
             }
         },
         "cancel": {
