--- a/ui/sections/vms/inspectors/virtual-machine-device.reel/virtual-machine-device-disk.reel/virtual-machine-device-disk.html
+++ b/ui/sections/vms/inspectors/virtual-machine-device.reel/virtual-machine-device-disk.reel/virtual-machine-device-disk.html
@@ -9,97 +9,94 @@
             "properties": {
                 "element": {"#": "owner"},
                 "treeControllers": {
-                    "ZVOL":         {"@": "datasetTreeController"},
-                    "DISK":         {"@": "directoryTreeController"},
+                    "BLOCK":         {"@": "blockTreeController"},
                     "FILE":         {"@": "fileTreeController"}
                 }
-            }
-        },
-        "datasetTreeController": {
-            "prototype": "core/controller/dataset-tree-controller",
-            "bindings": {
-                "service": {"<-": "@owner.application.dataService"}
-            }
-        },
-        "directoryTreeController": {
-            "prototype": "core/controller/filesystem-tree-controller",
-            "properties": {
-                "canListFiles": false
             },
             "bindings": {
-                "service": {"<-": "@owner.application.filesystemService"}
+                "treeController": {"<-": "@owner.treeControllers[@owner.object.target_type]"}
+            }
+        },
+        "blockTreeController": {
+            "prototype": "core/controller/tree/StaticTreeController",
+            "properties": {
+                "root": "/"
+            },
+            "bindings": {
+                "entries": {"<-": "@owner.blockOptions"}
             }
         },
         "fileTreeController": {
-            "prototype": "core/controller/filesystem-tree-controller",
+            "prototype": "core/controller/tree/StaticTreeController",
             "properties": {
-                "canListFiles": true
+                "root": "/"
             },
             "bindings": {
-                "service": {"<-": "@owner.application.filesystemService"}
+                "entries": {"<-": "@owner.fileOptions"}
             }
         },
         "targetPath": {
             "prototype": "ui/controls/field-treeview.reel",
             "properties": {
                 "element": {"#": "targetPath"},
-                "controller": {"@": "datasetTreeController"},
-                "label": "Target Path"
+                "label": "Target path"
             },
             "bindings": {
-                "selectedPath": {"<->": "@owner.object.target_path"},
-                "controller": {"<-": "@owner.treeControllers[@owner.object.target_type]"}
+                "selectedPath": {"<->": "@owner.object._target_path"},
+                "controller": {"<-": "@owner.treeController ?? null"},
+                "classList.has('hide')": {"<-": "@targetType.selectedValue == 'DISK'"}
             }
         },
         "targetType": {
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "targetType"},
-                "label": "Target Type"
+                "label": "Target type"
             },
             "bindings": {
-                "options": {"<-": "@owner.targetTypeOptions"},
+                "options": {"<-": "@owner.targetTypeOptions.sorted{}"},
                 "selectedValue": {"<->": "@owner.object.target_type"}
-            }
-        },
-        "sizeValidator": {
-            "prototype": "core/converter/validator/minimum-bytes-validator",
-            "properties": {
-                "allowDecimal": false,
-                "errorMessage": "Disk size must be a valid number of bytes.",
-                "minValue": 1
-            }
-        },
-        "sizeConverter": {
-            "prototype": "core/converter/validation-only-converter",
-            "properties": {
-                "validator": {"@": "sizeValidator"}
             }
         },
         "selectOptionConverter": {
             "prototype": "core/converter/select-option-converter"
         },
-        "diskSize": {
-            "prototype": "blue-shark/ui/field-text-input.reel",
+        "size": {
+            "prototype": "blue-shark/ui/field-number-unit.reel",
             "properties": {
-                "element": {"#": "diskSize"},
-                "label": "Disk Size",
-                "converter": {"@": "sizeConverter"}
+                "element": {"#": "size"},
+                "label": "Size",
+                "readOnlyFormat": "0 b"
             },
             "bindings": {
-                "value": {"<->": "@owner.object._diskSize"}
+                "units": {"<-": "@owner.sizeUnits"},
+                "value": {"<->": "@owner.object.size"},
+                "isReadOnly": {"<-": "@targetType.selectedValue == 'DISK'"}
             }
         },
-        "diskMode": {
+        "mode": {
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
-                "element": {"#": "diskMode"},
-                "label": "Disk Mode",
+                "element": {"#": "mode"},
+                "label": "Disk mode",
                 "converter": {"@": "selectOptionConverter"}
             },
             "bindings": {
-                "options": {"<-": "@owner.diskModeOptions"},
-                "selectedValue": {"<->": "@owner.object.mode"}
+                "options": {"<-": "@owner.blockModeOptions"},
+                "selectedValue": {"<->": "@owner.object.mode"},
+                "classList.has('hide')": {"<-": "@targetType.selectedValue != 'BLOCK'"}
+            }
+        },
+        "disk": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "disk"},
+                "label": "Target path"
+            },
+            "bindings": {
+                "options": {"<-": "@owner.diskOptions"},
+                "selectedValue": {"<->": "@owner.object._disk"},
+                "classList.has('hide')": {"<-": "@targetType.selectedValue != 'DISK'"}
             }
         }
     }
@@ -109,8 +106,10 @@
     <div data-montage-id="owner" class="VirtualMachineDeviceDisk">
         <div data-montage-id="targetType"></div>
         <div data-montage-id="targetPath"></div>
-        <div data-montage-id="diskSize"></div>
-        <div data-montage-id="diskMode"></div>
+        <div data-montage-id="disk"></div>
+        <div data-montage-id="block"></div>
+        <div data-montage-id="size"></div>
+        <div data-montage-id="mode"></div>
     </div>
 </body>
 </html>
