re-design unix permissions

--- a/ui/controls/unixPermissions.reel/unixPermissions.html
+++ b/ui/controls/unixPermissions.reel/unixPermissions.html
@@ -198,7 +198,7 @@
                 <td><div data-montage-id="othersExecute"></div></td>
             </tr>
         </table>
-        <div data-montage-id="modeBits"></div>
+        <div data-montage-id="modeBits" class="Permissions-mode"></div>
     </div>
 </body>
 </html>
