improves adding additional groups on user

--- a/ui/sections/accounts/inspectors/user.reel/user.html
+++ b/ui/sections/accounts/inspectors/user.reel/user.html
@@ -270,10 +270,11 @@
             }
         },
         "groups": {
-            "prototype": "blue-shark/ui/field-multiple-select.reel",
+            "prototype": "blue-shark/ui/multiple-select.reel",
             "properties": {
                 "element": {"#": "groups"},
-                "label": "Additional Groups",
+                "inputTitle": "Add additional groups",
+                "emptyMessage": "No groups added",
                 "labelPath": "name",
                 "placeholder": "Select a group",
                 "validationPath": "groups",
